--- a/Beginner projects/Login system/public/index.html
+++ b/Beginner projects/Login system/public/index.html
@@ -27,6 +27,12 @@
         <input type="password" placeholder="Password" id="password" name="password">
     
         <button>Log In</button>
+
+        <div class="create-account">
+            <span>Don't have an account?</span>
+            <a href="/signup">Create Account</a>
+        </div>
+
         <div class="social">
             <div class="go"><i class="fab fa-google"></i> Google</div>
             <div class="fb"><i class="fab fa-facebook"></i> Facebook</div>
